Update Lab 1 to Dynamo v0.8.0 with K8s-native architecture
Major updates for Dynamo v0.8.0 (released Jan 15, 2026):

Architecture Simplification:
- NATS and etcd are now OPTIONAL (K8s-native discovery via EndpointSlices)
- TCP transport is default (replaces NATS for request plane)
- Simplified deployment with fewer infrastructure dependencies

Version Updates:
- Bump RELEASE_VERSION from 0.7.1 to 0.8.0
- Update all helm chart references to v0.8.0
- Update CRD installation to v0.8.0

New Features Highlighted:
- Validation webhooks catch errors at deployment time
- Kubernetes-native service discovery (EndpointSlices)
- TCP transport (simpler than NATS for beginners)
- Note about optional NATS/etcd for extreme scale (Lab 3)

Changes:
- Overview: Added v0.8.0 feature highlights
- Section 2 Architecture: Updated to show K8s-native approach
- Step 1b: Added validation webhook notes
- Step 2: Explained optional NATS/etcd, K8s-native discovery
- All RELEASE_VERSION references: 0.7.1 → 0.8.0

Pedagogical approach: Teach simpler K8s-native deployment first,
NATS/etcd as advanced option in Lab 3.

Ref: https://github.com/ai-dynamo/dynamo/releases/tag/v0.8.0

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9c86199",
+   "id": "443df7e9",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -11,12 +11,19 @@
     "\n",
     "In this lab, you will:\n",
     "- Set up Kubernetes cluster with Dynamo platform\n",
-    "- Deploy Dynamo using cluster-wide operator (recommended)\n",
+    "- Deploy Dynamo v0.8.0 using K8s-native discovery (simplified architecture)\n",
     "- Configure a backend engine using disaggregated serving\n",
     "- Test the deployment with OpenAI-compatible API\n",
     "- Benchmark the deployment using AI-Perf\n",
     "\n",
-    "## Duration: ~90 minutes\n",
+    "**What's New in v0.8.0:**\n",
+    "- ✅ Kubernetes-native service discovery (no etcd required)\n",
+    "- ✅ TCP transport by default (no NATS required)\n",
+    "- ✅ Validation webhooks for early error detection\n",
+    "- ✅ Enhanced observability with unified tracing\n",
+    "- ✅ Improved disaggregated serving performance\n",
+    "\n",
+    "**Duration**: ~90 minutes\n",
     "\n",
     "---\n",
     "\n",
@@ -42,13 +49,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698133c7",
+   "id": "25a70c1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Set environment variables (use defaults if not already set)\n",
-    "export RELEASE_VERSION=${RELEASE_VERSION:-0.7.1}\n",
+    "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "export CACHE_PATH=${CACHE_PATH:-/data/huggingface-cache}\n",
     "\n",
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cd6e982",
+   "id": "3195aaff",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -82,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f8326e4",
+   "id": "8a608296",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3805466",
+   "id": "86c1e267",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -125,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ccd180",
+   "id": "3a1e7332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4200efcf",
+   "id": "6ddadfe8",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -159,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f83777",
+   "id": "983e511a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3ebbfa4",
+   "id": "32e1d394",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -191,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139a0a5b",
+   "id": "ffcffa09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7764abaa",
+   "id": "8f491cb7",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -215,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676651e2",
+   "id": "8c052c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ffd2eaa",
+   "id": "73891064",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -244,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a825dad",
+   "id": "c6186af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077b3d5b",
+   "id": "a5daf242",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -278,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5dff69",
+   "id": "13e905ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,17 +308,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b567d777",
+   "id": "c5694482",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
     "\n",
     "### Objectives\n",
-    "- Install Dynamo CRDs (Custom Resource Definitions)\n",
-    "- Install Dynamo platform (etcd, NATS, operator) \n",
+    "- Install Dynamo CRDs (Custom Resource Definitions) with validation webhooks\n",
+    "- Install Dynamo platform (operator with K8s-native discovery)\n",
     "- Verify platform components are running\n",
     "\n",
-    "### Architecture\n",
+    "### Architecture (v0.8.0 Simplified)\n",
+    "\n",
     "```\n",
     "Client Request\n",
     "      ↓\n",
@@ -321,10 +329,15 @@
     "      ↓\n",
     "Decode Worker (GPU 1) → Uses KV cache → Generates tokens\n",
     "      ↓\n",
-    "      ↓\n",
-    "   etcd + NATS (Coordination & Messaging)\n",
-    "      ↓\n",
-    "Dynamo Operator (Manages Resources)\n",
+    "Response to Client\n",
+    "\n",
+    "Infrastructure:\n",
+    "- Kubernetes EndpointSlices (service discovery)\n",
+    "- TCP Transport (default, no NATS needed)\n",
+    "- Dynamo Operator (manages deployments)\n",
+    "- Validation Webhooks (catch errors early)\n",
+    "\n",
+    "Note: NATS/etcd are optional for extreme scale (Lab 3)\n",
     "```\n",
     "\n",
     "### Deployment Mode\n",
@@ -344,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a44aa7",
+   "id": "11d2a1f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6537c83a",
+   "id": "a3eca5bc",
    "metadata": {},
    "source": [
     "### Step 1b: Install CRDs (Optional - Instructor May Do This)\n",
@@ -372,61 +385,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b6a141",
+   "id": "8ff94db3",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Install Dynamo CRDs (only if not already installed)\n",
-    "RELEASE_VERSION=${RELEASE_VERSION:-0.7.1}\n",
+    "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "\n",
-    "echo \"Installing Dynamo CRDs...\"\n",
+    "echo \"Installing Dynamo CRDs v$RELEASE_VERSION...\"\n",
     "helm fetch https://helm.ngc.nvidia.com/nvidia/ai-dynamo/charts/dynamo-crds-$RELEASE_VERSION.tgz\n",
     "helm install dynamo-crds dynamo-crds-$RELEASE_VERSION.tgz --namespace default\n",
     "\n",
     "echo \"\"\n",
     "echo \"Verifying CRD installation:\"\n",
-    "kubectl get crd | grep nvidia.com"
+    "kubectl get crd | grep nvidia.com\n",
+    "echo \"\"\n",
+    "echo \"✓ v0.8.0 CRDs include validation webhooks for early error detection\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b3ec8142",
+   "id": "2275ec60",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
     "\n",
-    "This installs ETCD, NATS, and the Dynamo Operator Controller (cluster-wide by default).\n"
+    "**Simplified in v0.8.0:** NATS and etcd are now **optional**. Dynamo uses Kubernetes-native service discovery (EndpointSlices) and TCP transport by default, making deployment simpler and reducing infrastructure dependencies.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518c826e",
+   "id": "544eea43",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "RELEASE_VERSION=${RELEASE_VERSION:-0.7.1}\n",
+    "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Download platform chart\n",
-    "echo \"Downloading Dynamo platform chart...\"\n",
+    "echo \"Downloading Dynamo platform chart v$RELEASE_VERSION...\"\n",
     "helm fetch https://helm.ngc.nvidia.com/nvidia/ai-dynamo/charts/dynamo-platform-$RELEASE_VERSION.tgz\n",
     "\n",
-    "# Install Dynamo platform (cluster-wide by default - recommended)\n",
+    "# Install Dynamo platform (namespace-scoped, K8s-native discovery)\n",
     "echo \"Installing Dynamo platform in namespace: $NAMESPACE\"\n",
+    "echo \"Using K8s-native discovery (no NATS/etcd required)\"\n",
     "helm install dynamo-platform \\\n",
     "    dynamo-platform-$RELEASE_VERSION.tgz \\\n",
-    "    --namespace $NAMESPACE\n",
+    "    --namespace $NAMESPACE \\\n",
+    "    --set dynamo-operator.namespaceRestriction.enabled=true\n",
     "\n",
     "echo \"\"\n",
-    "echo \"Platform installation initiated. Waiting for pods to be ready...\""
+    "echo \"✓ Platform installation initiated\"\n",
+    "echo \"  Discovery: Kubernetes EndpointSlices (native)\"\n",
+    "echo \"  Transport: TCP (default in v0.8.0)\"\n",
+    "echo \"\"\n",
+    "echo \"Waiting for pods to be ready...\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b4d11a0d",
+   "id": "03bd4907",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -437,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d863252e",
+   "id": "0c66270d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -485,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea96fab",
+   "id": "e8411b26",
    "metadata": {},
    "source": [
     "\n",
@@ -494,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef5eb9d",
+   "id": "929a09e7",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -561,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e8323c",
+   "id": "5f526cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6592817",
+   "id": "dee72216",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -669,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f58942a",
+   "id": "4c6402f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b124aa6",
+   "id": "dfeb6eab",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -699,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8261b12",
+   "id": "8cb3de80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1ac3c8",
+   "id": "cfea5425",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -744,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68be00aa",
+   "id": "20735501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78379ec7",
+   "id": "885713ee",
    "metadata": {},
    "source": [
     "### Step 3b: Troubleshoot Pod Issues (If Pods Are Crashing)\n",
@@ -811,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81d2209",
+   "id": "c33c96dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a09a96a",
+   "id": "5565e4b1",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -871,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a35327e",
+   "id": "01e90b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb484e2d",
+   "id": "9872e8e0",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -932,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169fdace",
+   "id": "164995da",
    "metadata": {},
    "source": [
     "### Understanding Disaggregated Serving Trade-offs\n",
@@ -969,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13905ddc",
+   "id": "fd60f2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c14e261a",
+   "id": "a88e7d15",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -995,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3943ee30",
+   "id": "a6125082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e97f6e",
+   "id": "7c356784",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -1018,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5e5092",
+   "id": "36948005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4601a2d",
+   "id": "e72a87d3",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -1048,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce00976a",
+   "id": "132db5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f17736bf",
+   "id": "ee233e9f",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -1078,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0900092",
+   "id": "86b93d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eebbbcce",
+   "id": "2593a25a",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1130,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b50c37",
+   "id": "a54916ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f1d21e",
+   "id": "67a3cb01",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1221,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a4fcef",
+   "id": "3094bbf8",
    "metadata": {},
    "source": [
     "### Cleanup\n",
@@ -1232,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa2267e1",
+   "id": "33a3cd0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca999ec1",
+   "id": "2fbf1d9d",
    "metadata": {},
    "source": [
     "**Note:** Keep your namespace and platform for Lab 2! Only delete the deployment and service, not the namespace.\n",
@@ -1266,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e152d8d5",
+   "id": "038e0f7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a8a45c",
+   "id": "e9d872c1",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1292,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70e05b3a",
+   "id": "e154369e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a45b7a95",
+   "id": "f4f66138",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1319,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740820ad",
+   "id": "2aa0f830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9620116c",
+   "id": "c912148e",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1346,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1eac69",
+   "id": "efa5c493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f10fa93d",
+   "id": "f44c6373",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1404,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce4f033",
+   "id": "f0de125e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6377698b",
+   "id": "ab956830",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1423,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf07a4c",
+   "id": "381168dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eedd3b62",
+   "id": "0f03302e",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1459,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b9a807",
+   "id": "72f837a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c13eb4b8",
+   "id": "b059c709",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1602,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a9fdfa",
+   "id": "f6e1da9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce558be9",
+   "id": "f4b98875",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1636,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b353cba",
+   "id": "b7e0f25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be36183",
+   "id": "f690e525",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1667,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f795bf",
+   "id": "5be08e43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12640ee",
+   "id": "e7ec7327",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1711,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53db9c69",
+   "id": "93b68c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,7 +1751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07806034",
+   "id": "c46a323a",
    "metadata": {},
    "source": [
     "### A7. Cleanup\n"
@@ -1739,7 +1760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4b5159",
+   "id": "eccfa1e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1760,7 +1781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ff481f",
+   "id": "ae99874e",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1769,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f12ebe",
+   "id": "5cd8cb91",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1797,7 +1818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa6d157",
+   "id": "d019afe6",
    "metadata": {},
    "source": [
     "\n"
