Update Lab 2 with v0.8.0 enhanced observability features
Add new production observability features from Dynamo v0.8.0:

New Sections:
- Section 5: Planner Observability Dashboard
  * Explains Planner role (intelligent request router)
  * Dashboard for request routing decisions
  * KV cache hit/miss rate tracking
  * Worker queue depth monitoring
  * Key metrics: routing decisions, cache efficiency, planning latency

- Section 6: Unified Tracing with OpenTelemetry
  * Distributed tracing across Dynamo components
  * End-to-end request flow visualization
  * Configuration for OTLP exporters (Jaeger/Tempo)
  * Bottleneck identification strategies
  * Trace + metrics correlation for debugging

Updated:
- Overview: Added v0.8.0 features to learning objectives
- Duration: 20min → 30min (added content)
- Renumbered sections (5→7, 6→8) after new insertions

Why This Matters:
- Planner visibility crucial for understanding disaggregated serving
- Tracing enables root-cause analysis in production
- Cache hit rate directly impacts cost and latency

Ref: https://github.com/ai-dynamo/dynamo/releases/tag/v0.8.0

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f3d2fc2",
+   "id": "3a69d7a9",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -13,6 +13,8 @@
     "- Access the cluster-wide Grafana and Prometheus installation\n",
     "- Configure metrics collection from your Dynamo deployment\n",
     "- Create and view the Dynamo dashboard in Grafana\n",
+    "- **New in v0.8.0:** Add Planner observability dashboard\n",
+    "- **New in v0.8.0:** Explore unified tracing with OpenTelemetry\n",
     "- Explore metrics in Prometheus\n",
     "- Understand key performance metrics\n",
     "\n",
@@ -20,7 +22,7 @@
     "\n",
     "**Note**: Prometheus and Grafana were installed cluster-wide during the initial setup. You'll verify they're running and configure them to monitor your Dynamo deployment.\n",
     "\n",
-    "## Duration: ~20 minutes\n",
+    "## Duration: ~30 minutes\n",
     "\n",
     "---\n",
     "\n",
@@ -58,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aa65d27",
+   "id": "33f44ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321e9371",
+   "id": "42bb62f3",
    "metadata": {},
    "source": [
     "### Step 2: Verify Monitoring Stack is Running\n",
@@ -106,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d447b8c",
+   "id": "6074e94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd61ab6c",
+   "id": "1ff906bb",
    "metadata": {},
    "source": [
     "---\n",
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a666726a",
+   "id": "7914c818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffefad8e",
+   "id": "a940e83d",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
@@ -181,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d49a17",
+   "id": "57caa180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14e753a",
+   "id": "166371e5",
    "metadata": {},
    "source": [
     "### Step 3: Label PodMonitors for Prometheus Discovery\n",
@@ -208,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c36cb2fc",
+   "id": "5bab6b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be198561",
+   "id": "893ba79f",
    "metadata": {},
    "source": [
     "### Step 4: Manually Test Metrics Endpoint\n",
@@ -238,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac47d942",
+   "id": "7ce1cc19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35e4f23",
+   "id": "20231741",
    "metadata": {},
    "source": [
     "### Step 5: Send Test Traffic to Generate Metrics\n",
@@ -270,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "387b2481",
+   "id": "b200d75d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce6d0aaf",
+   "id": "e4250818",
    "metadata": {},
    "source": [
     "---\n",
@@ -330,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573cc7ff",
+   "id": "edcd61fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113c451e",
+   "id": "32b1310f",
    "metadata": {},
    "source": [
     "---\n",
@@ -415,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a5d5e8",
+   "id": "d0a05607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,12 +444,240 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2b36c8",
+   "id": "9f107764",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Section 5: Understanding Key Metrics\n",
+    "## Section 5: Planner Observability Dashboard (New in v0.8.0)\n",
+    "\n",
+    "### Objectives\n",
+    "- Understand the Planner component in Dynamo's architecture\n",
+    "- Import and configure the Planner observability dashboard\n",
+    "- Monitor request routing and KV cache decisions\n",
+    "\n",
+    "### What is the Planner?\n",
+    "\n",
+    "The **Planner** is Dynamo's intelligent request router that makes critical decisions:\n",
+    "- Which worker should handle each request (prefill vs. decode)\n",
+    "- KV cache placement and reuse strategies\n",
+    "- Load balancing across workers\n",
+    "- Request batching decisions\n",
+    "\n",
+    "In v0.8.0, the Planner has enhanced observability with dedicated metrics for production debugging.\n",
+    "\n",
+    "### Import Planner Dashboard\n",
+    "\n",
+    "The Planner dashboard helps you understand:\n",
+    "- Request routing decisions\n",
+    "- KV cache hit/miss rates\n",
+    "- Worker selection logic\n",
+    "- Queue depths and backpressure\n",
+    "\n",
+    "**Note:** This dashboard is available starting with Dynamo v0.8.0.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d53d7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "GRAFANA_URL=\"http://$(hostname -I | awk '{print $1}'):30300\"\n",
+    "\n",
+    "# Create Planner dashboard ConfigMap\n",
+    "cat <<EOF | kubectl apply -f -\n",
+    "apiVersion: v1\n",
+    "kind: ConfigMap\n",
+    "metadata:\n",
+    "  name: grafana-dashboard-dynamo-planner\n",
+    "  namespace: $NAMESPACE\n",
+    "  labels:\n",
+    "    grafana_dashboard: \"1\"\n",
+    "data:\n",
+    "  dynamo-planner-dashboard.json: |\n",
+    "    {\n",
+    "      \"dashboard\": {\n",
+    "        \"title\": \"Dynamo Planner Observability\",\n",
+    "        \"tags\": [\"dynamo\", \"planner\", \"v0.8.0\"],\n",
+    "        \"timezone\": \"browser\",\n",
+    "        \"panels\": [\n",
+    "          {\n",
+    "            \"title\": \"Request Routing Decisions\",\n",
+    "            \"targets\": [\n",
+    "              {\n",
+    "                \"expr\": \"rate(dynamo_planner_routing_decisions_total[5m])\",\n",
+    "                \"legendFormat\": \"{{decision_type}}\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"type\": \"graph\"\n",
+    "          },\n",
+    "          {\n",
+    "            \"title\": \"KV Cache Hit Rate\",\n",
+    "            \"targets\": [\n",
+    "              {\n",
+    "                \"expr\": \"rate(dynamo_planner_kv_cache_hits_total[5m]) / rate(dynamo_planner_kv_cache_lookups_total[5m])\",\n",
+    "                \"legendFormat\": \"Cache Hit Rate\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"type\": \"graph\"\n",
+    "          },\n",
+    "          {\n",
+    "            \"title\": \"Worker Queue Depths\",\n",
+    "            \"targets\": [\n",
+    "              {\n",
+    "                \"expr\": \"dynamo_planner_worker_queue_depth\",\n",
+    "                \"legendFormat\": \"{{worker_id}}\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"type\": \"graph\"\n",
+    "          },\n",
+    "          {\n",
+    "            \"title\": \"Planning Latency (p95)\",\n",
+    "            \"targets\": [\n",
+    "              {\n",
+    "                \"expr\": \"histogram_quantile(0.95, rate(dynamo_planner_decision_duration_seconds_bucket[5m]))\",\n",
+    "                \"legendFormat\": \"p95 Planning Latency\"\n",
+    "              }\n",
+    "            ],\n",
+    "            \"type\": \"graph\"\n",
+    "          }\n",
+    "        ]\n",
+    "      }\n",
+    "    }\n",
+    "EOF\n",
+    "\n",
+    "echo \"✓ Planner dashboard ConfigMap created\"\n",
+    "echo \"  Dashboard will auto-import to Grafana\"\n",
+    "echo \"  View at: $GRAFANA_URL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74a62948",
+   "metadata": {},
+   "source": [
+    "### Access Planner Dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11bd5f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "echo \"Grafana URL: $GRAFANA_URL\"\n",
+    "echo \"Username: admin\"\n",
+    "echo \"Password: prom-operator\"\n",
+    "echo \"\"\n",
+    "echo \"Navigate to: Dashboards → Dynamo Planner Observability\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b4237a",
+   "metadata": {},
+   "source": [
+    "### Key Planner Metrics\n",
+    "\n",
+    "| Metric | Description | What to Watch |\n",
+    "|--------|-------------|---------------|\n",
+    "| `dynamo_planner_routing_decisions_total` | Routing decisions made | Decision type distribution |\n",
+    "| `dynamo_planner_kv_cache_hits_total` | KV cache hits | High hit rate = efficient reuse |\n",
+    "| `dynamo_planner_kv_cache_lookups_total` | Total cache lookups | Cache utilization |\n",
+    "| `dynamo_planner_worker_queue_depth` | Requests queued per worker | Backpressure indicators |\n",
+    "| `dynamo_planner_decision_duration_seconds` | Time to make routing decision | Planning overhead |\n",
+    "\n",
+    "**Optimization Tip:** High KV cache hit rates (>70%) indicate effective prompt caching and can significantly reduce latency and costs.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Section 6: Unified Tracing with OpenTelemetry (New in v0.8.0)\n",
+    "\n",
+    "### Objectives\n",
+    "- Understand distributed tracing in Dynamo\n",
+    "- Enable OpenTelemetry tracing\n",
+    "- Visualize end-to-end request flows\n",
+    "\n",
+    "### What is Unified Tracing?\n",
+    "\n",
+    "Dynamo v0.8.0 introduces **OpenTelemetry-based distributed tracing** that tracks requests across:\n",
+    "- Frontend API layer\n",
+    "- Planner routing decisions\n",
+    "- Prefill worker execution\n",
+    "- KV cache transfers\n",
+    "- Decode worker execution\n",
+    "\n",
+    "This gives you **end-to-end visibility** into where time is spent in complex requests.\n",
+    "\n",
+    "### Enable Tracing (Optional)\n",
+    "\n",
+    "**Note:** This requires a tracing backend like Jaeger or Tempo. For this lab, we'll show the configuration.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac5d71b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# Example: Enable OpenTelemetry tracing in Dynamo deployment\n",
+    "# Add these annotations to your DynamoGraphDeployment:\n",
+    "\n",
+    "cat <<EOF\n",
+    "spec:\n",
+    "  frontend:\n",
+    "    annotations:\n",
+    "      opentelemetry.io/enabled: \"true\"\n",
+    "      opentelemetry.io/exporter: \"otlp\"\n",
+    "      opentelemetry.io/endpoint: \"http://jaeger-collector:4317\"\n",
+    "  workers:\n",
+    "    annotations:\n",
+    "      opentelemetry.io/enabled: \"true\"\n",
+    "EOF\n",
+    "\n",
+    "echo \"Note: Tracing requires a backend like Jaeger or Tempo\"\n",
+    "echo \"For production deployments, integrate with your observability stack\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2e2eaaf",
+   "metadata": {},
+   "source": [
+    "### What Tracing Shows You\n",
+    "\n",
+    "With tracing enabled, you can see:\n",
+    "\n",
+    "1. **Request Flow Timeline:**\n",
+    "   - Frontend receives request: 0ms\n",
+    "   - Planner makes routing decision: 2ms\n",
+    "   - Prefill worker starts: 5ms\n",
+    "   - KV cache transfer: 150ms\n",
+    "   - Decode worker generates: 300ms\n",
+    "   - Response returned: 800ms\n",
+    "\n",
+    "2. **Bottleneck Identification:**\n",
+    "   - Slow prefill? → Model loading issue\n",
+    "   - Slow KV transfer? → Network/NIXL issue\n",
+    "   - Slow decode? → Batch size or GPU utilization\n",
+    "\n",
+    "3. **Cache Effectiveness:**\n",
+    "   - Trace shows \"KV cache hit\" span = prompt was cached\n",
+    "   - No cache hit = full prefill required\n",
+    "\n",
+    "**Production Tip:** Combine tracing with metrics for powerful debugging. Use metrics for aggregate patterns, traces for individual request debugging.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Section 7: Understanding Key Metrics\n",
     "\n",
     "### Frontend Metrics\n",
     "\n",
@@ -507,7 +737,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Section 6: Exercises and Exploration\n",
+    "## Section 8: Exercises and Exploration\n",
     "\n",
     "### Exercise 1: Correlate Load with Latency\n",
     "\n",
@@ -593,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1972bf4b",
+   "id": "3d467105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "847612b4",
+   "id": "f2912fc6",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -643,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d23509b",
+   "id": "4721d082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20c194ef",
+   "id": "55c9f10d",
    "metadata": {},
    "source": [
     "---\n",
@@ -702,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "688050b4",
+   "id": "1e19082e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d61d75",
+   "id": "401618b2",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -730,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ab19286",
+   "id": "59b425d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c95988d",
+   "id": "1993fa70",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -758,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba96b74",
+   "id": "8760da57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf622c3f",
+   "id": "aed76b31",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -782,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a1db0d",
+   "id": "6b72054e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997df9e0",
+   "id": "3af99b06",
    "metadata": {},
    "source": [
     "---\n",
